fitur edit alamat

--- a/apps/templates/accounts/profile.html
+++ b/apps/templates/accounts/profile.html
@@ -61,7 +61,7 @@
                     </form>
                     <div id="info-buttons" class="button-save-changes">
                         <a href="{{ url_for('authentication_blueprint.vehicles') }}" class="btn btn-secondary">Kendaraan</a>
-                        <a href="#" class="btn btn-secondary">Alamat</a>
+                        <a href="{{ url_for('authentication_blueprint.list_alamat') }}" class="btn btn-secondary">Alamat</a>
                     </div>
                 </div>
             </div>
