--- a/apps/templates/accounts/create-bengkel-profile.html
+++ b/apps/templates/accounts/create-bengkel-profile.html
@@ -1,68 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
-        <title>
-            Register Bengkel
-        </title>
-        
+
+        <!-- Include jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- Include Select2 CSS -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
+        <!-- Include Select2 JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+
+        <title>Edit Profile</title>
         {% extends "layouts/base-fullscreen.html" %}
         
-        {% block title %} Daftarkan Kendaraan {% endblock %}
+        {% block title %} Edit Profil {% endblock %}
         
-        <!-- Specific Page CSS goes HERE  -->
         {% block stylesheets %}
             <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css" rel="stylesheet">
-            <!-- Font Awesome for dropdown arrow -->
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         {% endblock stylesheets %}
         
-        {% set nav_background = true %}
-        
         {% include 'includes/navigation.html' %}
-        
+    
     </head>
-
+    
+    
     <body>
+    
         {% block content %}
-        <main class="container mt-5 pt-6 mb-5"> <!-- note to self = M IS MARGIN PADDING IS P, T IS TOP STOP ETC FORGETTING IT -->
+        <main class="container mt-5 pt-6 mb-5">
+        
             {% include 'includes/preloader.html' %}
-            
+        
             <div class="container">
-                <div class="row justify-content-center">
-                  <div class="col-md-6">
-                    <h1 class="text-center mb-4">Biodata Bengkel</h1>
+                <div class="container-content">
+                    <h2>Profil</h2>
                     <form method="POST" class="border p-4 shadow-sm rounded">
-                        {{form.hidden_tag()}}
-                        <div class="form-group">
-                            <label for="telepon">Nomor Telepon Bengkel</label>
-                            <div class="input-group">
-                                <span class="input-group-text" id="basic-addon3"><span class="fas fa-envelope"></span></span>
-                                {{form.noTelp(class="form-control")}}
+                        {{ form.hidden_tag() }}
+                        <div class="pp">
+                            <div class="img-profile">
+                                <img src="static/assets/img/zeusProfile.jpg" class="profileImg" alt="Profile Picture">
+                            </div>
+                            <div class="button-profile">
+                                <button type="button" class="btn btn-primary">Ganti Foto</button>
+                                <button type="button" class="btn btn-delete-pic" style="background-color: #dc3545; color: white;">Hapus Foto</button>
                             </div>
                         </div>
+                    
+                        <div class="form-group">
+                            <label for="select2-provinsi">Provinsi</label>
+                            {{ form.provinsi(class_="form-control", id="select2-provinsi") }}
+                        </div>
+                        <div class="form-group">
+                            <label for="select2-kabupaten">Kabupaten/Kota</label>
+                            {{ form.kabkot(class_="form-control", id="select2-kabupaten", disabled=True) }}
+                        </div>
+                        <div class="form-group">
+                            <label for="select2-kecamatan">Kecamatan</label>
+                            {{ form.kecamatan(class_="form-control", id="select2-kecamatan", disabled=True) }}
+                        </div>
+                        <div class="form-group">
+                            <label for="select2-kelurahan">Kelurahan</label>
+                            {{ form.kelurahan(class_="form-control", id="select2-kelurahan", disabled=True) }}
+                        </div>
+                        <div class="form-group">
+                            <label for="alamatlengkap">Alamat Lengkap</label>
+                            {{ form.alamatLengkap(class_="form-control") }}
+                        </div>
+                        <div class="form-group">
+                            <label for="namaalamat">Nama Alamat</label>
+                            {{ form.namaAlamat(class_="form-control") }}
+                        </div>
+                        
+                        <div class="form-group">
+                            <div class="usernames-group">
+                                <div class="f-name">
+                                    <label for="first-name">Nama depan</label>
+                                    {{ form.namaBengkel(class="form-control") }}
+                                </div>
+                        </div>
 
-                        <!-- <div class="form-group">
-                            <label for="lokasi">Alamat</label>
-                            <div class="input-group">
-                                <span class="input-group-text" id="basic-addon3"><span class="fas fa-envelope"></span></span>
-                                {{form.lokasi(class="form-control")}}
-                            </div>
-                        </div> -->
-                        <div class="d-grid">
+                        <div class="button-save-changes">
                             {{ form.submit(class="btn btn-primary") }}
                         </div>
                     </form>
-                  </div>
+                    
                 </div>
-              </div>
-
+            </div>
         </main>
+
+        <script>
+            const urlKabupaten = "https://ibnux.github.io/data-indonesia/kabupaten/";
+            const urlKecamatan = "https://ibnux.github.io/data-indonesia/kecamatan/";
+            const urlKelurahan = "https://ibnux.github.io/data-indonesia/kelurahan/";
+        
+            // Event handler untuk Provinsi
+            $('#select2-provinsi').change(function () {
+                const provinsiId = $(this).val();
+                if (provinsiId) {
+                    $.getJSON(urlKabupaten + provinsiId + ".json", function (res) {
+                        let options = '<option value="">- Pilih Kabupaten -</option>';
+                        res.forEach(function (kabupaten) {
+                            options += `<option value="${kabupaten.id}">${kabupaten.nama}</option>`;
+                        });
+                        $('#select2-kabupaten').html(options).prop('disabled', false);
+                    });
+                } else {
+                    $('#select2-kabupaten').html('<option value="">- Pilih Kabupaten -</option>').prop('disabled', true);
+                    $('#select2-kecamatan, #select2-kelurahan').html('<option value="">- Pilih -</option>').prop('disabled', true);
+                }
+            });
+        
+            // Event handler untuk Kabupaten
+            $('#select2-kabupaten').change(function () {
+                const kabupatenId = $(this).val();
+                if (kabupatenId) {
+                    $.getJSON(urlKecamatan + kabupatenId + ".json", function (res) {
+                        let options = '<option value="">- Pilih Kecamatan -</option>';
+                        res.forEach(function (kecamatan) {
+                            options += `<option value="${kecamatan.id}">${kecamatan.nama}</option>`;
+                        });
+                        $('#select2-kecamatan').html(options).prop('disabled', false);
+                    });
+                } else {
+                    $('#select2-kecamatan, #select2-kelurahan').html('<option value="">- Pilih -</option>').prop('disabled', true);
+                }
+            });
+        
+            // Event handler untuk Kecamatan
+            $('#select2-kecamatan').change(function () {
+                const kecamatanId = $(this).val();
+                if (kecamatanId) {
+                    $.getJSON(urlKelurahan + kecamatanId + ".json", function (res) {
+                        let options = '<option value="">- Pilih Kelurahan -</option>';
+                        res.forEach(function (kelurahan) {
+                            options += `<option value="${kelurahan.id}">${kelurahan.nama}</option>`;
+                        });
+                        $('#select2-kelurahan').html(options).prop('disabled', false);
+                    });
+                } else {
+                    $('#select2-kelurahan').html('<option value="">- Pilih Kelurahan -</option>').prop('disabled', true);
+                }
+            });
+        </script>
+        
+
+        <style>
+            .form-group {
+                padding-top: 20px;
+            }
+            .button-save-changes{
+                display: flex;
+                justify-content: center;
+                padding: 20px;
+            }
+            .l-name {
+                display: flex;
+                flex-direction: column;
+            }
+            .f-name {
+                display: flex;
+                flex-direction: column;
+            }
+            .usernames-group {
+                align-items: center;
+                display: flex;
+                flex-direction: row;
+            }
+            .a-content{
+                justify-content: center;
+                align-items: center;
+                flex-direction: column; 
+                display: flex;
+                padding-left:50px;
+                padding-right: 50px;
+                border-radius: 10px;
+                text-decoration: none;
+                color: black;
+                background-color: white;
+                outline: 1px solid black;
+            }
+            
+            .container-content{
+                justify-content: center;
+                align-items: center;
+                display: flex;
+                flex-direction: column;
+                height: 95vh;
+            }
+            
+            .profileImg {
+                width: 75px; 
+                height: 75px; 
+                border-radius: 50%; 
+                object-fit: cover; 
+                border: 2px solid black; 
+            }
+            
+            .pp{
+                flex-direction: column;
+                display :flex;
+                align-items: center;
+            }
+            
+            .button-profile {
+                display: flex; 
+                flex-direction: row; 
+                margin-left: 10px; 
+                padding-top: 20px;
+            }
+            
+            .btn {
+                margin-left: 5px;
+                margin-right: 5px;
+                border-radius: 10px;
+            }
+            
+            .body{
+                background-color: #1c2540;
+            }
+        
+        </style>
         
         {% include 'includes/footer.html' %}
-        
         {% endblock content %}
         
-        <!-- Specific Page JS goes HERE  -->
         {% block javascripts %}
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/js/bootstrap.bundle.min.js"></script>
         {% endblock javascripts %}
