penambahan fitur rekruitasi montir pada bengkel dan penerimaan tawaran bengkel pada montir

--- a/apps/templates/bengkel/montir_page.html
+++ b/apps/templates/bengkel/montir_page.html
@@ -20,7 +20,7 @@
                         <div class="page-wrapper">
                             <!-- [ Main Content ] start -->
                             <div id = row1 class="row">
-                                {% if montirs.count() == 0 %}
+                                {% if montirs | length == 0 %}
                                 <div class="alert alert-warning">Bengkel Anda tidak memiliki montir.</div>
                                 <div>
                                     <a href="{{ url_for('bengkel_blueprint.tambah_montir') }}" class="btn btn-primary">Tambah Montir</a>
@@ -49,96 +49,30 @@
                                             <div class="table-responsive">
                                                 <table class="table table-hover">
                                                     <tbody>
-                                                    <tr class="unread">
-                                                        <td><img class="rounded-circle" style="width:40px;"
-                                                                    src="{{ config.ASSETS_ROOT }}/bengkel/images/user/avatar-1.jpg" alt="activity-user">
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="mb-1">Isabella Christensen</h6>
-                                                            <p class="m-0">Lorem Ipsum is simply…</p>
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="text-muted"><i
-                                                                    class="fas fa-circle text-c-green f-10 m-r-15"></i>11
-                                                                MAY 12:56</h6>
-                                                        </td>
-                                                        <td><a href="#!"
-                                                                class="label theme-bg2 text-white f-12">Reject</a><a
-                                                                href="#!" class="label theme-bg text-white f-12">Approve</a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr class="unread">
-                                                        <td><img class="rounded-circle" style="width:40px;"
-                                                                    src="{{ config.ASSETS_ROOT }}/bengkel/images/user/avatar-2.jpg" alt="activity-user">
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="mb-1">Mathilde Andersen</h6>
-                                                            <p class="m-0">Lorem Ipsum is simply text of…</p>
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="text-muted"><i
-                                                                    class="fas fa-circle text-c-red f-10 m-r-15"></i>11 MAY
-                                                                10:35</h6>
-                                                        </td>
-                                                        <td><a href="#!"
-                                                                class="label theme-bg2 text-white f-12">Reject</a><a
-                                                                href="#!" class="label theme-bg text-white f-12">Approve</a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr class="unread">
-                                                        <td><img class="rounded-circle" style="width:40px;"
-                                                                    src="{{ config.ASSETS_ROOT }}/bengkel/images/user/avatar-3.jpg" alt="activity-user">
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="mb-1">Karla Sorensen</h6>
-                                                            <p class="m-0">Lorem Ipsum is simply…</p>
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="text-muted"><i
-                                                                    class="fas fa-circle text-c-green f-10 m-r-15"></i>9 MAY
-                                                                17:38</h6>
-                                                        </td>
-                                                        <td><a href="#!"
-                                                                class="label theme-bg2 text-white f-12">Reject</a><a
-                                                                href="#!" class="label theme-bg text-white f-12">Approve</a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr class="unread">
-                                                        <td><img class="rounded-circle" style="width:40px;"
-                                                                    src="{{ config.ASSETS_ROOT }}/bengkel/images/user/avatar-1.jpg" alt="activity-user">
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="mb-1">Ida Jorgensen</h6>
-                                                            <p class="m-0">Lorem Ipsum is simply text of…</p>
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="text-muted f-w-300"><i
-                                                                    class="fas fa-circle text-c-red f-10 m-r-15"></i>19 MAY
-                                                                12:56</h6>
-                                                        </td>
-                                                        <td><a href="#!"
-                                                                class="label theme-bg2 text-white f-12">Reject</a><a
-                                                                href="#!" class="label theme-bg text-white f-12">Approve</a>
-                                                        </td>
-                                                    </tr>
-                                                    <tr class="unread">
-                                                        <td><img class="rounded-circle" style="width:40px;"
-                                                                    src="{{ config.ASSETS_ROOT }}/bengkel/images/user/avatar-2.jpg" alt="activity-user">
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="mb-1">Albert Andersen</h6>
-                                                            <p class="m-0">Lorem Ipsum is simply dummy…</p>
-                                                        </td>
-                                                        <td>
-                                                            <h6 class="text-muted"><i
-                                                                    class="fas fa-circle text-c-green f-10 m-r-15"></i>21
-                                                                July 12:56</h6>
-                                                        </td>
-                                                        <td><a href="#!"
-                                                                class="label theme-bg2 text-white f-12">Reject</a><a
-                                                                href="#!" class="label theme-bg text-white f-12">Approve</a>
-                                                        </td>
-                                                    </tr>
+                                                        {%for item in montirs%}
+                                                            <tr class="unread">
+                                                                <!-- <td><img class="rounded-circle" style="width:40px;"
+                                                                            src="{{ config.ASSETS_ROOT }}/bengkel/images/user/avatar-1.jpg" alt="activity-user">
+                                                                </td> -->
+                                                                <td>
+                                                                    <h6 class="mb-1">{{item.montir.firstname}} {{item.montir.lastname}}</h6>
+                                                                    <h7 class="mb-1">{{item.gajiIDR}}</h7>
+                                                                    <p class="m-0">{{item.montir.jabatan}}</p>
+                                                                </td>
+                                                                <td>
+                                                                    <h6 class="text-muted">
+                                                                        <i class="fas fa-circle text-c-green f-10 m-r-15"></i>
+                                                                            <span id="status-text-{{ item.montir.montirId }}">
+                                                                                Status: {{item.montir.status}}
+                                                                            </span>
+                                                                        </h6>
+                                                                </td>
+                                                                <td>
+                                                                    <a href="#!" class="label theme-bg2 text-white f-12">Pecat</a>
+                                                                </td>
+                                                            </tr>
+                                                        {%endfor%}
+                                                    
                                                     </tbody>
                                                 </table>
                                             </div>
