--- a/apps/templates/bengkel/layouts/base.html
+++ b/apps/templates/bengkel/layouts/base.html
@@ -63,6 +63,7 @@
 
     {% include "bengkel/includes/scripts.html" %}
     {% block extra_js %}{% endblock extra_js %}
-  
+    
+    {% block javascripts %}{% endblock javascripts %}
   </body>
 </html>
