--- a/apps/templates/bengkel/tambah_montir.html
+++ b/apps/templates/bengkel/tambah_montir.html
@@ -38,14 +38,10 @@
                                                 <label for="gaji">{{form.gaji.label}}</label>
                                                 {{ form.gaji(class_="form-control", id="gaji") }}
                                                 <p>Nilai saat ini: <span id="valuenya"></span></p>
-                                                <script>
-                                                    const salaryInput = document.getElementById('gaji');
-                                                    const valueDisplay = document.getElementById('valuenya');
-                                                    
-                                                    salaryInput.addEventListener('input', function () {
-                                                        valueDisplay.textContent = salaryInput.value;
-                                                    });
-                                                </script>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="gaji">{{form.deadline.label}}</label>
+                                                {{ form.deadline(class_="form-control", id="deadline") }}
                                             </div>
                                             <div class="button-save-changes">
                                                 {{ form.submit(class="btn btn-primary") }}
@@ -69,5 +65,12 @@
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
-
+<script>
+    const salaryInput = document.getElementById('gaji');
+    const valueDisplay = document.getElementById('valuenya');
+    
+    salaryInput.addEventListener('input', function () {
+        valueDisplay.textContent = salaryInput.value;
+    });
+</script>
 {% endblock javascripts %}
